fourtune/k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: fourtune
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fourtune-api
  template:
    metadata:
      labels:
        app: fourtune-api
    spec:
      containers:
        - name: fourtune-api
          image: ghcr.io/prgrms-be-adv-devcourse/fourtune:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "1200m"
              memory: "2Gi"
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 15
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 30
      imagePullSecrets:
        - name: ghcr-secret   # kubectl create secret docker-registry ghcr-secret 으로 생성

---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: fourtune
spec:
  selector:
    app: fourtune-api
  ports:
    - port: 8080
      targetPort: 8080
